--- a/android/variables.gradle
+++ b/android/variables.gradle
@@ -1,16 +1,28 @@
 ext {
     minSdkVersion = 22
-    compileSdkVersion = 34
-    targetSdkVersion = 34
-    androidxActivityVersion = '1.8.0'
-    androidxAppCompatVersion = '1.6.1'
+    compileSdkVersion = 35
+    targetSdkVersion = 35
+    androidxActivityVersion = '1.9.2'
+    androidxAppCompatVersion = '1.7.0'
+    androidxBrowserVersion = '1.8.0'
+    androidxCheckboxVersion = '1.0.0'
+    androidxAnnotationVersion = '1.8.2'
+    androidxCoreVersion = '1.13.1'
     androidxCoordinatorLayoutVersion = '1.2.0'
-    androidxCoreVersion = '1.12.0'
-    androidxFragmentVersion = '1.6.2'
-    coreSplashScreenVersion = '1.0.1'
-    androidxWebkitVersion = '1.9.0'
+    androidxExifinterfaceVersion = '1.3.7'
+    androidxFragmentVersion = '1.8.3'
+    androidxInterpolatorVersion = '1.0.0'
+    androidxResourceInspectionVersion = '1.0.1'
+    androidxSavedStateVersion = '1.2.1'
+    androidxTransitionVersion = '1.5.1'
+    androidxVectorDrawableVersion = '1.2.0'
+    androidxVectorDrawableAnimatedVersion = '1.2.0'
+    googleMaterialVersion = '1.12.0'
+    playServicesLocationVersion = '21.3.0'
+    androidxTestRunnerVersion = '1.6.2'
+    androidxTestRulesVersion = '1.6.1'
     junitVersion = '4.13.2'
-    androidxJunitVersion = '1.1.5'
-    androidxEspressoCoreVersion = '3.5.1'
-    cordovaAndroidVersion = '10.1.1'
+    androidxJunitVersion = '1.2.1'
+    androidxEspressoCoreVersion = '3.6.1'
+    capacitorAndroidVersion = '7.0.0'
 }
