--- a/android/variables.gradle
+++ b/android/variables.gradle
@@ -25,4 +25,5 @@ ext {
     androidxJunitVersion = '1.2.1'
     androidxEspressoCoreVersion = '3.6.1'
     capacitorAndroidVersion = '7.0.0'
+    coreSplashScreenVersion = '1.0.1'
 }
